# FlashcardMCP

./: .gitignore  Dify集成操作指南.md  README.md  README_en.md  README_zh.md  config.py  csv_upload_flashcards.html  main.py  mcp-config.json  pyproject.toml  requirements.txt  server.py  server_backup.py  setup.cfg  test_basic_generation.py  test_basic_output.html  test_csv_upload.py  test_csv_upload_html_output.html  test_playwright_pdf.py  test_upload_csv.csv  test_weasyprint_pdf.py
.trae/rules/: project_rules.md
project_docs/: PRD.md  技术配置.md  转换流程设计.md  闪卡生成流程与模板说明.md
sample/: card_template_sample.html  listen_template_sample.html  minimal_template_sample.html
src/: main.py
src/handlers/: __init__.py  card_generator.py  pdf_generator.py
src/templates/: __init__.py  base.html  card_template.html  card_template_jinja.html  default.html  index.html  listen.html  minimal.html  playwright_card_template.html  weasyprint_card_template.html
src/utils/: __init__.py  csv_reader.py  json_validator.py  markdown_parser.py  pdf_generator.py
tests/: conftest.py  run_tests.py  test_advanced_features.py  test_card_generator.py  test_data.json  test_json_validator.py  test_markdown_parser.py  test_multi_style_data.json  test_pdfkit_minimal.py  test_playwright_pdf.py  test_vocabulary_pdf_generator.py  词语表.csv  词语表.xlsx
