[project]
name = "flask-card-mcp"
version = "0.1.0"
description = "Flask Card MCP - PDF Flashcard Generator"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "flask>=2.0.0",
    "jinja2>=3.0.0",
    "reportlab>=4.0.0",
    "playwright>=1.40.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.0.0",
    "markdown>=3.3.0",
    "pytest>=6.0.0"
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0"
]