[project]
name = "fastapi-card-mcp"
version = "0.1.0"
description = "FastAPI Card MCP - PDF Flashcard Generator"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "jinja2>=3.0.0",
    "reportlab>=4.0.0",
    "playwright>=1.40.0",
    "httpx==0.27.0",
    "httpx-sse==0.4.2",
    "fastmcp>=1.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.0.0",
    "markdown>=3.3.0",
    "pytest>=6.0.0",
    "requests>=2.32.5",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0"
]
