[metadata]
name = fastapi-card-mcp
version = 0.1.0
description = FastAPI Card MCP - PDF Flashcard Generator
long_description = file: README.md
long_description_content_type = text/markdown
author = User
author_email = user@example.com

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
include_package_data = True
install_requires =
    jinja2>=3.0.0
    reportlab>=4.0.0
    playwright>=1.40.0
    httpx>=0.28.1
    httpx-sse==0.4.2
    fastmcp>=2.11.3
    fastapi>=0.68.0
    uvicorn>=0.15.0
    pydantic>=2.0.0
    markdown>=3.3.0
    requests>=2.32.5

[options.packages.find]
where = src

[options.package_data]
# include HTML templates inside the package
templates = *.html

[sdist]
formats = gztar